--- a/css.css
+++ b/css.css
@@ -8,7 +8,7 @@ img.logo{
 img.logo:hover {
     opacity: 0.5
 }
-a.menu {
+.menu {
    text-decoration: none;
    color: black
 }
@@ -32,19 +32,6 @@ a.menu {
     margin: 1em;
 }
 
-.arrow_left {
-    text-align: right;
-    font-weight: bold;
-    margin-top: 100px;
-    margin-bottom: 100px;
-
-}
-.arrow_right {
-    text-align: left;
-    font-weight: bold;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
 #bestFilm_image {
     border-style: none;
     margin: 1em;
@@ -72,13 +59,9 @@ a.menu {
 #mot {
     padding: 1em;
 }
+
 .flex-container {
     display: flex;
-    border-style: none;
-    justify-content: center;
-    width : 50em;
-    height : 15em;
-    /*margin: 1em auto*/
 }
 
 .flex-container > div {
@@ -139,43 +122,41 @@ body {font-family: Arial, Helvetica, sans-serif;}
     text-align: left;
     padding-left: 1em;
 }
-.slider-wrapper {
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
+#rank {
+    max-width: 720px;
+    overflow-x: scroll;
 }
-.slide-arrow {
-  position: absolute;
-  display: flex;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  height: 4rem;
+#anime_rank {
+    max-width: 720px;
+    overflow-x: scroll;
+}
+#drama_rank {
+    max-width: 720px;
+    overflow-x: scroll;
+}
+#bio_rank {
+    max-width: 720px;
+    overflow-x: scroll;
+}
+.movie-cover {
+    min-width: 180px;
+    background-repeat: no-repeat;
+}
+
+.slide-arrow-prev {
   background-color: white;
   border: none;
-  width: 2rem;
-  font-size: 3rem;
-  padding: 0;
-  cursor: pointer;
-  opacity: 0.5;
-  transition: opacity 100ms;
+  width: 4rem;
+  font-size: 5rem;
+  margin : 0 1rem 0 0;
 }
 
-.slide-arrow:hover,
-.slide-arrow:focus {
-  opacity: 1;
-}
-
-#slide-arrow-prev {
-  left: 0;
-  padding-left: 0.25rem;
-  border-radius: 0 2rem 2rem 0;
-}
-
-#slide-arrow-next {
-  right: 0;
-  padding-left: 0.75rem;
-  border-radius: 2rem 0 0 2rem;
+.slide-arrow-next {
+  background-color: white;
+  border: none;
+  width: 4rem;
+  font-size: 5rem;
+  margin : 0 0 0 1rem;
 }
 
 #modalImage {
