--- a/css.css
+++ b/css.css
@@ -50,10 +50,9 @@ h3 {
      height : 2em;
 }
 #myBtn {
-    margin: 2em;
-    vertical-align: middle;
+    margin-left: 12em;
     text-align: center;
-    padding: 1em
+    padding: 2px
 }
 #bestFilm_resume {
     width : 30em;
@@ -164,8 +163,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 #modalImage {
+    background-repeat: no-repeat;
     width: 182px;
     height: 156px;
-    padding: 3.5em
+    padding: 4.5em 4.5em 2.5em 4.5em
+}
+#modalTitle {
+    font-size: 25px;
+
 
 }
