--- a/css.css
+++ b/css.css
@@ -168,8 +168,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
     height: 156px;
     padding: 4.5em 4.5em 2.5em 4.5em
 }
+
 #modalTitle {
     font-size: 18px;
+}
 
-
+.titlesModal {
+    font-weight: 900;
 }
