--- a/css.css
+++ b/css.css
@@ -18,7 +18,8 @@ h3 {
 .flex-head{
     display: flex;
     justify-content: space-around;
-    background-color: Khaki;
+    //background-color: Khaki;
+    background-color: PowderBlue;
     border-radius: 30px;
     align-items: end;
     font-size: 25px;
@@ -74,10 +75,6 @@ h3 {
     text-align: center;
 }
 
-/*
-body {font-family: Arial, Helvetica, sans-serif;}
-*/
-
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -109,7 +106,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
   font-size: 28px;
   font-weight: bold;
 }
-
 .close:hover,
 .close:focus {
   color: #000;
