--- a/css.css
+++ b/css.css
@@ -61,6 +61,7 @@ h3 {
     margin-bottom: 35px;
     margin-top: 35px;
     text-align: left ;
+    padding-left: 50px;
     
 }
 #myBtn {
@@ -75,6 +76,7 @@ h3 {
 }
 #mot {
     padding: 1em;
+    font-weight: bold;
 }
 
 .flex-container {
@@ -84,7 +86,6 @@ h3 {
 .flex-container > div {
     width : 50em;
     height : 15em;
-    margin: 1em;
     text-align: center;
 }
 
@@ -134,36 +135,8 @@ h3 {
     text-align: left;
     padding-left: 1em;
 }
-/*
-$img-param: (
-    best,
-    anime,
-    romance,
-    bio
-);
 
-@each img-param, $genre in $img-param {
-    ##{$genre}_rank {
-        max-width: 720px;
-        overflow-x: scroll;
-        }
-}
-*/
-
-
-#best_rank {
-    max-width: 720px;
-    overflow-x: scroll;
-}
-#anime_rank {
-    max-width: 720px;
-    overflow-x: scroll;
-}
-#romance_rank {
-    max-width: 720px;
-    overflow-x: scroll;
-}
-#bio_rank {
+.carrousel {
     max-width: 720px;
     overflow-x: scroll;
 }
@@ -171,6 +144,7 @@ $img-param: (
 .movie-cover {
     min-width: 180px;
     background-repeat: no-repeat;
+    margin : 0;
 }
 
 .slide-arrow-prev {
